# alignment-free-hgt-detection

./: .gitignore  CITATION.cff  LICENSE  README.md  REPRODUCE.md  pyproject.toml  reproduce.py
artifacts/: README.md
data/out_refseq/: manifest.tsv
docs/: main.tex
docs/report/: main.tex  references.bib
golden/: README.md
golden/bw_pipeline/explanations/: comp_32_explained.txt  comp_5_explained.txt  top_candidates_explained.txt
golden/bw_pipeline/rerun_pruned/: all_scores.tsv
golden/bw_pipeline/results/: global_stats.json
golden/hackathon_report_refs/: comp_32_explained.txt  top_anomaly_edges.tsv
golden/no_bw_pipeline/legacy_rerun_pruned_reference/: component_features.tsv
golden/no_bw_pipeline/rerun_pruned/: all_scores.tsv
golden/no_bw_pipeline/results/: global_stats.json  global_stats.tsv
golden/reference_inputs/: manifest_tiny_set.tsv
src/: README
src/artifacts/: README.md
src/config/: species.txt
src/golden/: README.md
src/golden/hackathon_report_refs/: comp_5_explained.txt  comp_8_explained.txt  global_stats.json  global_stats.tsv  top_candidates_explained.txt
src/graph_construction/: __init__.py  graph_pruning.py  k_mer_encoding.py  kmer_candidates_from_faa.py  orchestrator.py  refseq_fetch_proteins.py
src/hgt_pipeline/: __init__.py  pipeline.py
src/reporting/: explain_component.py  explain_top_candidates.py  plot_components.py  top_anomaly_edges.py
tests/: README.md  test_regression_baselines.py
tools/legacy/: benchmark.py
tools/reporting/: detalied_plot_compoentns.py  plot_components.py  summarize_global_stats.py
(+20 files in other folders)
